# leo

./: .gitignore  .npmignore  .prettierignore  .prettierrc  AGENTS.md  CODEOWNERS  LICENSE.md  README.md  SECURITY.md  config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  rollup.config.js  svelte.config.js  todo.md  transformTokens.js  tsconfig-tokens.json  tsconfig.json
.github/: renovate.json
.github/workflows/: audit-deps.yml  build.yml  cleanup.yml  codeql.yml  deploy.yml  security.yml  sf-symbols.yml  socket-fix.yml  test-tokens.yml  transform-tokens.yml  update-icons.yml
.storybook/: argHelper.ts  global.svelte  main.cjs  main.js  main.ts  preview-head.html  preview.js  preview.ts
examples/android/: build.js
examples/example-ui-react/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  webpack.config.js
examples/ios/: build.js
examples/plain-html/: README.md  css  index.html  leo-ntp.html  nala  perf.html  thrash.html
icons/: meta.d.ts  meta.js  meta.ts  required.gni
postcss/: darkmode.js  fork-css.js  theme.js
scripts/: audit_deps.js  gen-react-bindings.js  gen-svelte-types.js  update-icons.js
storyHelpers/: Slot.svelte.d.ts  SlotInfo.svelte.d.ts
tests/: cssOutput.test.ts  gen-types.test.ts  theme.common.js  theme.dark.test.js  theme.light.test.js  theme.mixed.test.js  theme.test.js  tokens.js.test.js
tokens/: config.js  design-tokens.tokens.json  legacy-colors.json  transformTokens.js  utils.js
types/: svelte-react.d.ts
web-components/: svelte-react.ts
(+355 files in other folders)
